[gd_scene load_steps=29 format=3 uid="uid://c46u56kn4ir4y"]

[ext_resource type="PackedScene" uid="uid://ce4x3xa1n7wsx" path="res://scenes/background.tscn" id="1_6icab"]
[ext_resource type="PackedScene" uid="uid://c6kuvrcrxl2sr" path="res://scenes/ground.tscn" id="1_7x73t"]
[ext_resource type="Script" path="res://scripts/main.gd" id="1_dejiq"]
[ext_resource type="PackedScene" uid="uid://bc156o5in1r1k" path="res://scenes/cats/black_cat.tscn" id="2_8uv4y"]
[ext_resource type="PackedScene" uid="uid://dfcsh5b7ftcru" path="res://scenes/player.tscn" id="2_rrhh7"]
[ext_resource type="PackedScene" uid="uid://b7im23tik1ri2" path="res://scenes/cats/gray_cat.tscn" id="3_ebltj"]
[ext_resource type="PackedScene" uid="uid://c260n62082sfx" path="res://scenes/cats/light_cat.tscn" id="4_q47ok"]
[ext_resource type="PackedScene" uid="uid://b3lm148hvrifi" path="res://scenes/cats/green_cat.tscn" id="5_f3a1g"]
[ext_resource type="PackedScene" uid="uid://bu4jalvua6jk" path="res://scenes/cats/orange_cat.tscn" id="5_lt0db"]
[ext_resource type="PackedScene" uid="uid://b2ygwns5dr211" path="res://scenes/ui/hud.tscn" id="5_mo7pu"]
[ext_resource type="PackedScene" uid="uid://dnbk8hwdwvkd7" path="res://scenes/cats/white_cat.tscn" id="6_wosea"]
[ext_resource type="PackedScene" uid="uid://dtasl0kw0cfjo" path="res://scenes/cats/blue_cat.tscn" id="7_7nnaf"]
[ext_resource type="PackedScene" uid="uid://c0waeo1kbmicg" path="res://scenes/ui/running_music.tscn" id="8_i004v"]
[ext_resource type="PackedScene" uid="uid://dwccscvhgbkaj" path="res://scenes/cats/pink_cat.tscn" id="9_0rni0"]
[ext_resource type="PackedScene" uid="uid://bqugp4dysqfuk" path="res://scenes/objects/bookshelf.tscn" id="10_2vmp8"]
[ext_resource type="PackedScene" uid="uid://inor2v8tc0hs" path="res://scenes/ui/game_over.tscn" id="10_4c20w"]
[ext_resource type="PackedScene" uid="uid://so22h6q30vhj" path="res://scenes/objects/chair.tscn" id="11_uxcue"]
[ext_resource type="PackedScene" uid="uid://cmoxx3oim36xs" path="res://scenes/objects/coin.tscn" id="12_lcvrn"]
[ext_resource type="PackedScene" uid="uid://w3a6bldv8nuf" path="res://scenes/objects/fridge.tscn" id="13_7dtbu"]
[ext_resource type="PackedScene" uid="uid://xmcamt5xtmet" path="res://scenes/ui/menu.tscn" id="20_ym1el"]
[ext_resource type="FontFile" uid="uid://s15272omc2m3" path="res://assets/fonts/retro.ttf" id="21_ugs5p"]
[ext_resource type="Script" path="res://scripts/cutscene.gd" id="22_ajwdw"]
[ext_resource type="Shader" path="res://scenes/pixelate.gdshader" id="23_lgwg7"]
[ext_resource type="Texture2D" uid="uid://6u3ybriuok4m" path="res://assets/sprites/animal-pics/ave-del-terror-animal.jpeg" id="24_0py3e"]
[ext_resource type="Texture2D" uid="uid://4lst6lqjreur" path="res://assets/sprites/backgrounds/cutscene/background_shadow.png" id="25_h1dbg"]
[ext_resource type="Texture2D" uid="uid://mrmvmkav2m77" path="res://assets/sprites/backgrounds/cutscene/background.png" id="25_la0mv"]
[ext_resource type="Texture2D" uid="uid://bmqn8omsmppv" path="res://assets/sprites/animal-pics/florentino-ameghino.png" id="27_j4xh1"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rbr7q"]
shader = ExtResource("23_lgwg7")
shader_parameter/amount = 60.0

[node name="Main" type="Node"]
script = ExtResource("1_dejiq")
cat_variants = Array[PackedScene]([ExtResource("2_8uv4y"), ExtResource("3_ebltj"), ExtResource("4_q47ok"), ExtResource("5_lt0db"), ExtResource("6_wosea")])
blue_cat = ExtResource("7_7nnaf")
green_cat = ExtResource("5_f3a1g")
pink_cat = ExtResource("9_0rni0")
item_variants = Array[PackedScene]([ExtResource("10_2vmp8"), ExtResource("11_uxcue"), ExtResource("12_lcvrn"), ExtResource("13_7dtbu")])

[node name="Background" parent="." instance=ExtResource("1_6icab")]

[node name="Ground" parent="." instance=ExtResource("1_7x73t")]

[node name="Sprite2D" parent="Ground" index="0"]
scale = Vector2(3, 3)

[node name="Player" parent="." instance=ExtResource("2_rrhh7")]
position = Vector2(150, 444)

[node name="AnimatedSprite2D" parent="Player" index="0"]
autoplay = ""

[node name="CollisionShape2D" parent="Player" index="1"]
position = Vector2(-0.5, -0.5)

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(576, 324)

[node name="HUD" parent="." instance=ExtResource("5_mo7pu")]

[node name="HighScoreLabel" parent="HUD" index="1"]
visible = false

[node name="TimeLabel" parent="HUD" index="3"]
visible = false

[node name="TitleLabel" type="Label" parent="HUD"]
offset_left = 290.0
offset_top = 11.0
offset_right = 872.0
offset_bottom = 70.0
theme_override_fonts/font = ExtResource("21_ugs5p")
theme_override_font_sizes/font_size = 46
text = "TITULO"
horizontal_alignment = 1

[node name="GameOver" parent="." node_paths=PackedStringArray("main") instance=ExtResource("10_4c20w")]
main = NodePath("..")

[node name="RunningMusic" parent="." instance=ExtResource("8_i004v")]

[node name="Menu" parent="." instance=ExtResource("20_ym1el")]
visible = false

[node name="Cutscene" type="CanvasLayer" parent="."]
visible = false
script = ExtResource("22_ajwdw")

[node name="Photo" type="Sprite2D" parent="Cutscene"]
material = SubResource("ShaderMaterial_rbr7q")
position = Vector2(585, 300)
scale = Vector2(0.332, 0.332)
texture = ExtResource("24_0py3e")

[node name="BackgroundShadow" type="Sprite2D" parent="Cutscene"]
position = Vector2(576, 324)
scale = Vector2(6, 6)
texture = ExtResource("25_h1dbg")

[node name="Background" type="Sprite2D" parent="Cutscene"]
position = Vector2(576, 324)
scale = Vector2(6, 6)
texture = ExtResource("25_la0mv")

[node name="AnimalName" type="RichTextLabel" parent="Cutscene"]
offset_left = 317.0
offset_top = 501.0
offset_right = 844.0
offset_bottom = 546.0
rotation = 0.0174533
size_flags_stretch_ratio = 1.23
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/normal_font = ExtResource("21_ugs5p")
theme_override_font_sizes/normal_font_size = 27
bbcode_enabled = true
text = "[center][shake rate=15.0 level=5 connected=1]¡Texto con efecto shake![/shake][/center]
"
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="Cutscene"]
offset_left = 251.0
offset_top = 48.0
offset_right = 931.0
offset_bottom = 93.0
rotation = -0.0174533
size_flags_stretch_ratio = 1.23
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("21_ugs5p")
theme_override_font_sizes/font_size = 30
text = "¡Encontraste todos los huesos!"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Label2" type="Label" parent="Cutscene"]
anchors_preset = -1
anchor_left = -0.386765
anchor_top = 11.0444
anchor_right = -0.386765
anchor_bottom = 11.0444
offset_left = 654.019
offset_top = -6563.74
offset_right = 1352.02
offset_bottom = -6518.74
size_flags_stretch_ratio = 1.23
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 3
theme_override_constants/shadow_outline_size = 3
theme_override_fonts/font = ExtResource("21_ugs5p")
theme_override_font_sizes/font_size = 24
text = "Presiona SPACE para continuar"
horizontal_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Florencio" type="Sprite2D" parent="Cutscene"]
position = Vector2(110, 604)
scale = Vector2(0.962656, 0.962656)
texture = ExtResource("27_j4xh1")

[node name="Overlay" type="ColorRect" parent="Cutscene"]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 1)

[connection signal="game_end" from="." to="GameOver" method="_on_game_end"]
[connection signal="reset_game" from="." to="HUD" method="reset"]
[connection signal="reset_game" from="." to="GameOver" method="_on_reset_game"]
[connection signal="start_game" from="." to="HUD" method="_on_start_game"]
[connection signal="time_expired" from="HUD" to="." method="end_game"]
[connection signal="time_expired" from="Cutscene" to="." method="end_game"]

[editable path="Background"]
[editable path="Ground"]
[editable path="Player"]
[editable path="HUD"]
